cluster/core/networking-ingress/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    #traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    hajimari.io/enable: "false"
    hajimari.io/icon: "web"
    hajimari.io/appName: "traefik"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "traefik.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN//./-}-tls"
  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
